// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component Default page: matches snapshot 1`] = `
<nav
  className="section"
>
  <div
    className="container"
  >
    <a
      className="link"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Old Danish Dictionary
    </a>
    <script
      dangerouslySetInnerHTML={
        {
          "__html": "{"@context":"https://schema.org/","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Old Danish Dictionary","item":"undefined/"}]}",
        }
      }
      type="application/ld+json"
    />
  </div>
</nav>
`;

exports[`Breadcrumbs component Letter page: matches snapshot 1`] = `
<nav
  className="section"
>
  <div
    className="container"
  >
    <a
      className="link"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Old Danish Dictionary
    </a>
    <a
      className="link"
      href="/letter/g"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Letter G
    </a>
    <script
      dangerouslySetInnerHTML={
        {
          "__html": "{"@context":"https://schema.org/","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Old Danish Dictionary","item":"undefined/"},{"@type":"ListItem","position":2,"name":"Letter G","item":"undefined/letter/g"}]}",
        }
      }
      type="application/ld+json"
    />
  </div>
</nav>
`;

exports[`Breadcrumbs component Word page: matches snapshot 1`] = `
<nav
  className="section"
>
  <div
    className="container"
  >
    <a
      className="link"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Old Danish Dictionary
    </a>
    <a
      className="link"
      href="/letter/g"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Letter G
    </a>
    <a
      className="link"
      href="/word/gronfugl"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      Grønfugl
    </a>
    <script
      dangerouslySetInnerHTML={
        {
          "__html": "{"@context":"https://schema.org/","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Old Danish Dictionary","item":"undefined/"},{"@type":"ListItem","position":2,"name":"Letter G","item":"undefined/letter/g"},{"@type":"ListItem","position":3,"name":"Grønfugl","item":"undefined/word/gronfugl"}]}",
        }
      }
      type="application/ld+json"
    />
  </div>
</nav>
`;
